<resources>
    <string name="app_name">AttendZ</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="google">Google</string>
    <string name="sign_up">Sign Up / Create New Account</string>
    <string name="or">Or</string>

    <string name="user_name">User</string>
    <string name="active_events">Active Events:</string>
    <string name="past_events">Past Events</string>
    <string name="view_all">View All ></string>
    <string name="view_full_history">View All History ></string>

    <!-- Menu-->
    <string name="home" translatable="false">Home</string>
    <string name="create_event" translatable="false">Create Event</string>
    <string name="join_event" translatable="false">Join Event</string>
    <string name="setting">Setting</string>

    <string name="joined_event" translatable="false">Joined Event</string>

    <string name="event_name" translatable="false">Event Name</string>
    <string name="generate_qr" translatable="false">Generate QR</string>
    <string name="attendance" translatable="false">Attendance</string>
    <string name="host_name" translatable="false">Host Name</string>
    <string name="event_date" translatable="false">Event Date</string>

    <string name="empty" translatable="false"> </string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="history">History</string>

    <string name="your_activities" translatable="false">Your Activities</string>
    <string name="your_event" translatable="false">Your Event</string>
    <string name="participated_event" translatable="false">Participated Event</string>

    <string name="event_policy" translatable="false">*Instruction&amp;Policy:</string>
    <string name="p1" translatable="false">1. You can only create an event in a timeline with unlimited of duration and attendee limitation.
    </string>
    <string name="p2" translatable="false">2. Only you can see the number and detail such as name, date, and attending timestamp of the attendee in the event you created.</string>
    <string name="p3" translatable="false">3. Once you created the event, you’re inaccessible to navigation bar unless you closed the event. You logically can host only an event at a moment.
    </string>

    <string name="qr_desc" translatable="false">Let your attendee scan this QR code to join the attendance list.</string>
    <string name="view_attendee_list" translatable="false">View Attendee List</string>
    <string name="close_event" translatable="false">Close Event</string>

    <!-- error -->
    <string name="create_event_error_msg" translatable="false">Event name must be 8 characters or over </string>
    <string name="qr_scanner_desc" translatable="false">Aim your camera to the QR code generated by the host of event.</string>
    <string name="export" translatable="false">Export</string>

</resources>