<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.EventQRActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:fontFamily="@font/font_black"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        />
    <ImageView
        android:id="@+id/eventQr"
        android:layout_margin="16dp"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:src="@drawable/qr_example"
        />
    <ImageView
        android:layout_margin="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_qr"
        />
    <TextView
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/qr_desc"
        android:fontFamily="@font/font_regular"
        android:layout_marginBottom="16dp"
        />
    <Button
        android:id="@+id/viewAttendeeList"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/view_attendee_list"
        android:fontFamily="@font/font_bold"
        android:background="@drawable/rounded_shape_black"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/closeEventButton"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/close_event"
        android:fontFamily="@font/font_bold"
        android:textColor="@color/white"
        android:background="@drawable/rounded_shape_red"
        />

</LinearLayout>