<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_background_theme"
    >

    <!-- Dara's task: Implemented new font and add some new designs-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/danger_rounded_shape"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/langugaeButton"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginBottom="320dp"
        android:background="@drawable/rounded_shape_black"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayName"
        android:onClick="onLanguageSwitchClick" />

    <Button
        android:id="@+id/themeButton"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/rounded_shape_black"
        android:text="@string/theme"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/langugaeButton" />


    <ImageView
        android:id="@+id/logOuticon"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_signout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="603dp" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg" />


</androidx.constraintlayout.widget.ConstraintLayout>