<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="24dp"
        app:cardBackgroundColor="@color/card"
        app:cardElevation="5dp"
        app:cardCornerRadius="16dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="2dp"
            android:paddingEnd="16dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"
                    android:fontFamily="@font/font_bold"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hostName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/host_name"
                    android:textSize="12sp"
                    android:fontFamily="@font/font_regular"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:textSize="12sp"
                    android:fontFamily="@font/font_regular"
                    android:textColor="@color/black" />
            </LinearLayout>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/eventAttendee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/attendance"
                android:fontFamily="@font/font_regular"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>