<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_background_theme"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_event"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventNameInput"
        android:layout_width="324dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_border"
        android:ems="10"
        android:inputType="text"
        android:padding="16dp"
        android:hint="@string/event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="257dp"
        android:layout_height="64dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/rounded_shape_black"
        android:text="@string/generate_qr"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameInput" />
</androidx.constraintlayout.widget.ConstraintLayout>
