<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_theme"
    android:orientation="vertical"
    >

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerView"
        android:layout_width="418dp"
        android:layout_height="736dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <include layout="@layout/fragment_home_placeholder" />
    </com.facebook.shimmer.ShimmerFrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background_theme"
        android:id="@+id/parentLyt"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImg"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_events"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/view_full_history"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_shape_red"
                app:cardBackgroundColor="@color/common_google_signin_btn_text_dark"
                app:cardCornerRadius="16dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:id="@+id/activeEventName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_name"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/hostName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/host_name"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/eventDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_date"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/attendee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/attendance"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>